[package]
name = "solana-copy-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17.6"
solana-sdk = "1.17.6"
solana-transaction-status = "1.17.6"
solana-program = "1.17.6"
spl-token = "4.0.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
futures = "0.3"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.2.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10.0"
colored = "2.1.0"
bs58 = "0.5.0"
base64 = "0.13.0"